Closed Bug 1692734 Opened 4 years ago Closed 4 years ago

Long page loads with DoH enabled

Categories

(Core :: Networking: DNS, defect, P1)

Firefox 87
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox85 --- unaffected
firefox86 --- unaffected
firefox87 + fixed

People

(Reporter: ssj2kite, Assigned: dragana)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:87.0) Gecko/20100101 Firefox/87.0

Steps to reproduce:

Mozregression, single build, mozilla-central, 2021-02-13 (20210213214236). Options -> search for dns, enable DoH (either provider, although more consistent with Cloudflare). Then load a youtube video (I've been using https://www.youtube.com/watch?v=LfI8sxSFtuE to test).

Actual results:

The site (and subsequently sometimes the video itself) take 20-50s to load.

Expected results:

Not taking that long to load. From my limited testing, it only happens with DoH enabled, and not on all websites or all the time. Bugzilla for example loads as usual most of the time, except user avatars sometimes are slow. Mozregression pointed me to bug #1690615 as the culprit.

I've also captured a performance profile: https://share.firefox.dev/3tZBYZ0

The Bugbug bot thinks this bug should belong to the 'Core::Networking: DNS' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Networking: DNS
Product: Firefox → Core
Keywords: regression
Regressed by: 1690615
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1690615

Can you make a http log that capture when it is happening?

https://developer.mozilla.org/en-US/docs/Mozilla/Debugging/HTTP_logging

Flags: needinfo?(ssj2kite)

Yes I can.

https://mega.nz/file/PohFwICB#PpWNuDvZKMTdH31M2UdqE4Xi7mpd3T36AeEdcRfPuUE

Let me know if you need it on a different file upload service.

Flags: needinfo?(ssj2kite)
Assignee: nobody → dd.mozilla
Severity: -- → S2
Priority: -- → P1
Whiteboard: [necko-triaged]
Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/af4582c63ed1 If FastFallbackToIPv4 is set disable IPv6 on backup connections. r=necko-reviewers,valentin
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

Nightly build 20210219094547 didn't seem to fix this. Same repro steps on that build have the same extreme load times.

http log: https://mega.nz/file/y8gTgaxA#Yo-ZlahZ2SW6B4MzePoP5TQ_1yVtQ8G68UUVKUalPBo

Let me know if you need it on a different file upload service.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: