Bug 1692734 - If FastFallbackToIPv4 is set disable IPv6 on backup connections. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D105482